Fixed Alignment of Registration

--- a/src/style.css
+++ b/src/style.css
@@ -610,7 +610,7 @@ margin: 25px 0 10px;
 #reg{
   display: flex;
   justify-content: center;
-  margin-top: 3em;
+  align-items: center;
   min-height: 100vh;
   width: 100%;
 }
